--- a/styles.css
+++ b/styles.css
@@ -494,7 +494,7 @@ body, html {
     position: absolute;
     top: 100%;
     left: 0;
-    background-color: #093C34;
+    background-color: rgb(9, 62, 54);
     padding: 10px;
     border: 1px solid #fff;
   }
