--- a/styles.css
+++ b/styles.css
@@ -515,7 +515,7 @@ body.loaded {
 }
 
 .carousel-arrow:hover {
-    background-color: #f3e2c4;
+    background-color: #fbd086;
 }
 
 .carousel-arrow.left {
